boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible5.yar
// [error: string modifiers base64wide and nocase are incompatible]
rule a {
    strings:
        $a = "a" nocase base64wide
    condition:
        $a
}
